force-app/main/default/objects/Event_Session2__c/Event_Session2__c.object-meta.xml
<CustomObject>
    <description>Event sessions come from the parsed event schedule
used by ef3   scanner</description>
    <label>EF3 Event Session</label>
    <nameField>
        <label>Event Session 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EF3 Event Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>