force-app/main/default/objects/Event_Session2__c/fields/App_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>App_Session_Id__c</fullName>
    <externalId>true</externalId>
    <label>App Session Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>