force-app/main/default/objects/Event_Session2__c/fields/Event_or_Conference__c.field-meta.xml
<CustomField>
    <fullName>Event_or_Conference__c</fullName>
    <label>Event or Conference</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipName>Event_Sessions_2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>