force-app/main/default/objects/Event_Session2__c/fields/Fallback_Join_URL__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Join_URL__c</fullName>
    <description>URL to be used if Zoom integration fails.</description>
    <inlineHelpText>URL to be used if Zoom integration fails.</inlineHelpText>
    <label>Fallback Join URL</label>
    <type>Url</type>
</CustomField>