force-app/main/default/objects/Event_Session2__c/fields/Hide_from_scan_modes__c.field-meta.xml
<CustomField>
    <fullName>Hide_from_scan_modes__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >When checked, this &apos;session&apos; will not show in the list of &apos;scan modes&apos; in the QR scanner.</description>
    <inlineHelpText
  >When checked, this &apos;session&apos; will not show in the list of &apos;scan modes&apos; in the QR scanner.</inlineHelpText>
    <label>Hide from scan modes</label>
    <type>Checkbox</type>
</CustomField>