force-app/main/default/objects/Event_Session2__c/fields/Hide_Session__c.field-meta.xml
<CustomField>
    <fullName>Hide_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide the session from the vDGS Hub</description>
    <inlineHelpText>Hide the session from the vDGS Hub</inlineHelpText>
    <label>Hide from vDGS Hub</label>
    <type>Checkbox</type>
</CustomField>