force-app/main/default/objects/Event_Session2__c/fields/Join_Enabled_at_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Join_Enabled_at_Minutes__c</fullName>
    <defaultValue>15</defaultValue>
    <description
  >How many minutes before a session should the join button be enabled?</description>
    <inlineHelpText
  >How many minutes before a session should the join button be enabled?</inlineHelpText>
    <label>Join Enabled at Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>