force-app/main/default/objects/Event_Session2__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description
  >The order with which a session appears (when concurrent)</description>
    <inlineHelpText
  >The order with which a session appears (when concurrent)</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>