force-app/main/default/objects/Event_Session2__c/fields/Select_Sponsors_Only__c.field-meta.xml
<CustomField>
    <fullName>Select_Sponsors_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Show this session in the vDGS agenda only to specific sponsors and staff.</description>
    <inlineHelpText
  >Show this session in the vDGS agenda only to specific sponsors and staff.</inlineHelpText>
    <label>Select Sponsors Only</label>
    <type>Checkbox</type>
</CustomField>