force-app/main/default/objects/Event_Session2__c/fields/Session_Duration__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration__c</fullName>
    <description
  >When the session is not associated with a webinar or other record to indicate duration, this field will be used.</description>
    <inlineHelpText
  >When the session is not associated with a webinar or other record to indicate duration, this field will be used.</inlineHelpText>
    <label>Session Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>