force-app/main/default/objects/Event_Session2__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <description
  >For VDGS this controls what type of webinar is created</description>
    <inlineHelpText
  >For VDGS this controls what type of webinar is created</inlineHelpText>
    <label>Session Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concurrent</fullName>
            </value>
            <value>
                <fullName>Keynote</fullName>
            </value>
            <value>
                <fullName>Executive Briefing</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>