force-app/main/default/objects/Event_Session2__c/fields/speakers_json__c.field-meta.xml
<CustomField>
    <fullName>speakers_json__c</fullName>
    <label>speakers json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>