force-app/main/default/objects/Event_Session2__c/fields/vDGS_External_URL__c.field-meta.xml
<CustomField>
    <fullName>vDGS_External_URL__c</fullName>
    <description
  >If a vDGS session is anything externally linked, this URL is where the button &apos;join now&apos; goes to</description>
    <inlineHelpText
  >If a vDGS session is anything externally linked, this URL is where the button &apos;join now&apos; goes to</inlineHelpText>
    <label>vDGS External URL</label>
    <type>Url</type>
</CustomField>