force-app/main/default/objects/Event_Session2__c/fields/VDGS_Session__c.field-meta.xml
<CustomField>
    <fullName>VDGS_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Identifies the Webinar event which implements this session (Designed for VDGS)</description>
    <inlineHelpText
  >Identifies the Webinar event which implements this session (Designed for VDGS)</inlineHelpText>
    <label>VDGS Session</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>EF3 Event Sessions (VDGS Session)</relationshipLabel>
    <relationshipName>VDGS_Session</relationshipName>
    <type>Lookup</type>
</CustomField>